luxtensor/build_log.txt
cargo :     Checking luxtensor-storage v0.1.0 (D
:\venera\cardano\moderntensor\moderntensor\luxte
nsor\crates\luxtensor-storage)
At line:1 char:1
+ cargo check --package luxtensor-rpc 2>&1 | 
Out-File -Encoding utf8 bu ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   
     Checking lu...tensor-storage):String) [],  
   RemoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
error[E0432]: unresolved import `sha2`
   --> crates\luxtensor-storage\src\checkpoint.r
s:346:13
    |
346 |         use sha2::{Sha256, Digest};
    |             ^^^^ use of unresolved module 
or unlinked crate `sha2`
    |
    = help: if you wanted to use a crate named 
`sha2`, use `cargo add sha2` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `flate2`
   --> crates\luxtensor-storage\src\checkpoint.r
s:256:23
    |
256 |         let encoder = 
flate2::write::GzEncoder::new(file, 
flate2::Compression::default());
    |                       ^^^^^^ use of 
unresolved module or unlinked crate `flate2`
    |
    = help: if you wanted to use a crate named 
`flate2`, use `cargo add flate2` to add it to 
your `Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `flate2`
   --> crates\luxtensor-storage\src\checkpoint.r
s:256:59
    |
256 |         let encoder = 
flate2::write::GzEncoder::new(file, 
flate2::Compression::default());
    |                                           
                ^^^^^^ use of unresolved module 
or unlinked crate `flate2`
    |
    = help: if you wanted to use a crate named 
`flate2`, use `cargo add flate2` to add it to 
your `Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `flate2`
   --> crates\luxtensor-storage\src\checkpoint.r
s:284:23
    |
284 |         let decoder = 
flate2::read::GzDecoder::new(file);
    |                       ^^^^^^ use of 
unresolved module or unlinked crate `flate2`
    |
    = help: if you wanted to use a crate named 
`flate2`, use `cargo add flate2` to add it to 
your `Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `tar`
   --> crates\luxtensor-storage\src\checkpoint.r
s:285:27
    |
285 |         let mut archive = 
tar::Archive::new(decoder);
    |                           ^^^ use of 
unresolved module or unlinked crate `tar`
    |
    = help: if you wanted to use a crate named 
`tar`, use `cargo add tar` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `tar`
   --> crates\luxtensor-storage\src\checkpoint.r
s:257:27
    |
257 |         let mut archive = 
tar::Builder::new(encoder);
    |                           ^^^ use of 
unresolved module or unlinked crate `tar`
    |
    = help: if you wanted to use a crate named 
`tar`, use `cargo add tar` to add it to your 
`Cargo.toml`
help: consider importing this struct
    |
  4 + use std::thread::Builder;
    |
help: if you import `Builder`, refer to it 
directly
    |
257 -         let mut archive = 
tar::Builder::new(encoder);
257 +         let mut archive = 
Builder::new(encoder);
    |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `serde_json`
   --> crates\luxtensor-storage\src\checkpoint.r
s:120:43
    |
120 |                         if let Ok(meta) = 
serde_json::from_reader::<_, 
CheckpointMetadata>(reader) {
    |                                           
^^^^^^^^^^ use of unresolved module or unlinked 
crate `serde_json`
    |
    = help: if you wanted to use a crate named 
`serde_json`, use `cargo add serde_json` to add 
it to your `Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `serde_json`
   --> 
crates\luxtensor-storage\src\checkpoint.rs:181:9
    |
181 |         
serde_json::to_writer_pretty(writer, &metadata)
    |         ^^^^^^^^^^ use of unresolved 
module or unlinked crate `serde_json`
    |
    = help: if you wanted to use a crate named 
`serde_json`, use `cargo add serde_json` to add 
it to your `Cargo.toml`

error[E0282]: type annotations needed
   --> crates\luxtensor-storage\src\checkpoint.r
s:182:23
    |
182 |             .map_err(|e| 
CheckpointError::CreateFailed(e.to_string()))?;
    |                       ^                   
             - type must be known at this point
    |
help: consider giving this closure parameter an 
explicit type
    |
182 |             .map_err(|e: /* Type */| 
CheckpointError::CreateFailed(e.to_string()))?;
    |                        ++++++++++++

error[E0282]: type annotations needed
   --> crates\luxtensor-storage\src\checkpoint.r
s:260:23
    |
260 |             .map_err(|e| 
CheckpointError::ExportFailed(e.to_string()))?;
    |                       ^                   
             - type must be known at this point
    |
help: consider giving this closure parameter an 
explicit type
    |
260 |             .map_err(|e: /* Type */| 
CheckpointError::ExportFailed(e.to_string()))?;
    |                        ++++++++++++

error[E0282]: type annotations needed
   --> crates\luxtensor-storage\src\checkpoint.r
s:263:23
    |
263 |             .map_err(|e| 
CheckpointError::ExportFailed(e.to_string()))?;
    |                       ^                   
             - type must be known at this point
    |
help: consider giving this closure parameter an 
explicit type
    |
263 |             .map_err(|e: /* Type */| 
CheckpointError::ExportFailed(e.to_string()))?;
    |                        ++++++++++++

error[E0282]: type annotations needed
   --> crates\luxtensor-storage\src\checkpoint.r
s:291:23
    |
291 |             .map_err(|e| 
CheckpointError::ImportFailed(e.to_string()))?;
    |                       ^                   
             - type must be known at this point
    |
help: consider giving this closure parameter an 
explicit type
    |
291 |             .map_err(|e: /* Type */| 
CheckpointError::ImportFailed(e.to_string()))?;
    |                        ++++++++++++

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `serde_json`
   --> 
crates\luxtensor-storage\src\checkpoint.rs:297:9
    |
297 |         
serde_json::to_writer_pretty(meta_file, 
&metadata)
    |         ^^^^^^^^^^ use of unresolved 
module or unlinked crate `serde_json`
    |
    = help: if you wanted to use a crate named 
`serde_json`, use `cargo add serde_json` to add 
it to your `Cargo.toml`

error[E0282]: type annotations needed
   --> crates\luxtensor-storage\src\checkpoint.r
s:298:23
    |
298 |             .map_err(|e| 
CheckpointError::ImportFailed(e.to_string()))?;
    |                       ^                   
             - type must be known at this point
    |
help: consider giving this closure parameter an 
explicit type
    |
298 |             .map_err(|e: /* Type */| 
CheckpointError::ImportFailed(e.to_string()))?;
    |                        ++++++++++++

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `sha2`
   --> crates\luxtensor-storage\src\checkpoint.r
s:349:34
    |
349 |         fn hash_dir(hasher: &mut 
sha2::Sha256, path: &Path) -> 
std::io::Result<()> {
    |                                  ^^^^ use 
of unresolved module or unlinked crate `sha2`
    |
    = help: if you wanted to use a crate named 
`sha2`, use `cargo add sha2` to add it to your 
`Cargo.toml`

Some errors have detailed explanations: E0282, 
E0432, E0433.
For more information about an error, try `rustc 
--explain E0282`.
error: could not compile `luxtensor-storage` 
(lib) due to 15 previous errors
